--- a/Dokumentation/Das_Team/Sourcen/DasTeam/Personalblatt.tex
+++ b/Dokumentation/Das_Team/Sourcen/DasTeam/Personalblatt.tex
@@ -8,7 +8,7 @@
     +41 79 604 93 61                            & &  \\
     Automatiker EFZ                             & &  \\
     thomas.wiss@stud.hslu.ch                 	& &  \\
-    Studiengang: Informatik, Teilzeit           & &  \\
+    Studiengang: Informatik, Vollzeit           & &  \\
                                                 & &  \\
                                                 & &  \\
     Yves Studer                                 & &  \multirow{8}{4cm}{\includegraphics[width=0.2\textwidth]{Sourcen/DasTeam/Bilder/YvesStuder.jpg}} \\
