--- a/Dokumentation/Testat_1/Anforderungsliste/Sourcen/Titelblatt.tex
+++ b/Dokumentation/Testat_1/Anforderungsliste/Sourcen/Titelblatt.tex
@@ -10,8 +10,8 @@
         yves.studer@stud.hslu.ch   & thomas.wiss@stud.hslu.ch \\
                                    & \\
         Livio Kunz                 & Niklaus Manser \\
-        Hubelmatt 7                 & Brunnmattstrasse 11\\
-        6206 Neuenkirch         & 6010 Kriens \\
+        Hubelmatt 7                & Brunnmattstrasse 11\\
+        6206 Neuenkirch            & 6010 Kriens \\
         +41 79 811 53 03           & +41 77 405 58 56 \\
         livio.kunz@stud.hslu.ch    & niklaus.manser@stud.hslu.ch \\
                                    & \\
@@ -29,12 +29,12 @@
     \end{tabular}
     \vspace*{1.7cm}
     \newline
-    {\Huge Meilenstein 1 Dokumentation}\\
+    {\Huge Anforderungsliste}\\
     \vspace*{1.2cm}\\
     {\normalsize Dozent: Markus Thalmann}\\
     \vspace*{0.2cm}\\
     {\normalsize Hochschule Luzern - Technik \& Architektur}\\
-    {\normalsize Interdisziplinäre Projekarbeit 2014}\\
+    {\normalsize Interdisziplinäre Projektarbeit 2014}\\
     \vspace*{2.3cm}
     \newline
     {\normalsize Horw, Hochschule Luzern - T\&A, \today}\\
