diverse anpassungen gemacht

--- a/Dokumentation/Testat_1/Anforderungsliste/Sourcen/Anforderungsliste.tex
+++ b/Dokumentation/Testat_1/Anforderungsliste/Sourcen/Anforderungsliste.tex
@@ -1,59 +1,60 @@
 \section{Anforderungsliste}
 
     \begin{longtable}{ |p{.5cm}| p{.5cm} |p{4.2cm} |p{4cm} | p{1.5cm}|}\hline
-    \textbf{Nr.} & & \textbf{Bezeichnung}  & \textbf{Werte}                             & \textbf{Verantw.}\\ \hline
-           &   & \textbf{Gerät}                &                                            &\\ \hline
-    \rowno & F & Gerätemasse maximal LxBxH     & 50 cm x 50 cm x 100 cm                     & M \\  \hline
-    \rowno & M & Gewicht                       & max. 6 kg ohne Stromversorgung, ohne CPU   & E / M\\ \hline
-    \rowno & W & Gewicht                       & max. 2 kg ohne Stromversorgung, ohne CPU   & E / M\\ \hline
-    \rowno & F & Startbefehl                   & drahtlos                                   & E / I\\ \hline
-    \rowno & W & Startbefehl                   & drahtlos via Smartphone                    & E / I\\ \hline
-    \rowno & F & Stoppbefehl                   & Akustisch oder optisch                     & E / I\\ \hline
-    \rowno & W & Stoppbefehl                   & Akustisch und optisch                      & E / I\\ \hline
-    \rowno & F & Autonomität	               & autonomer Ablauf                           & E / I\\ \hline
-    \rowno & W & Autonomität                   & autonome Energieversorgung                 & E / I\\ \hline
-    \rowno & M & Lautstärke				       & max. 100 dB                                & E / I / M\\ \hline
-    \rowno & M & Lautstärke				       & max. 60 dB                                 & E / I / M\\ \hline
-    \rowno & M & Treffgenauigkeit              & innerhalb 20 cm x 20 cm                    & E / I / M\\ \hline
-    \rowno & W & Treffgenauigkeit              & innerhalb 10 cm x 10 cm                    & E / I / M\\ \hline
-           &   &                               &                                            & \\ \hline
-           &   & \textbf{Randbedingungen}      &                                            & \\ \hline
-           &   & \textbf{Kosten}               &                                            & \\ \hline
-    \rowno & F & Finanzieller Aufwand          & max. 600 CHF                               & \\ \hline
-           &   &                               &                                            & \\ \hline
-           &   & \textbf{Tennisball}           &                                            & \\ \hline
-    \rowno & F & Gewicht                       & 56 g - 59 g                                & Dozenten\\ \hline
-    \rowno & F & Durchmesser                   & min. 6.3 cm , max. 7.3 cm                  & Dozenten\\ \hline
-    \rowno & F & Ballzustand                   & neu / kaum gebraucht                       & Dozenten\\ \hline
-           &   &                               &                                            & \\ \hline
-           &   & \textbf{Spielfeld}            &                                            & \\ \hline
-    \rowno & F & Startfeld mindestens          & 60 cm x 150 cm                             & Dozenten\\ \hline
-    \rowno & F & Wurfdistanz                   & min. 75 cm ,max. 250 cm                    & Dozenten\\ \hline
-    \rowno & F & Max. Höhe Bogenwurf           & 180 cm                                     & Dozenten\\ \hline
-    \rowno & F & Wandhöhe                      & 100 cm                                     & Dozenten\\ \hline
-    \rowno & F & Korbhöhe                      & 40 cm                                      & Dozenten\\ \hline
-    \rowno & F & Korbdurchmesser               & min. 30 cm                                 & Dozenten\\ \hline
-    \rowno & F & Kontrast Korb zu Wand         & Spanplatte zu schwarzem Korb               & Dozenten\\ \hline
-    \rowno & F & Korbstabilität                & mit Sand gefüllt                           & Dozenten\\ \hline
-           &   &                               &                                            & \\ \hline
-           &   & \textbf{Zeitverhältnisse}     &                                            & \\ \hline
-    \rowno & F & Vorbereitungszeit             & max. 5 min                                 & E / I / M \\ \hline
-    \rowno & F & Ablaufzeit                    & max. 5 min                                 & E / I / M \\ \hline
-    \rowno & W & Ablaufzeit                    & < 45 sec                                   & E / I / M \\ \hline
-           &   &                               &                                            & \\ \hline
-           &   & \textbf{Umgebungsbedingungen} &                                            & \\ \hline
-    \rowno & F & Umgebungstemperatur           & 10 °C bis 45 °C                            & \\ \hline
-    \rowno & M & Windgeschwindigkeit           & < 1 km/h                                   & Dozenten\\ \hline
-    \rowno & F & Lichtbedingung                & Abschirmung Infrarotstrahlung gleichmässig & Dozenten\\ \hline
-    \end{longtable}
+    \textbf{Nr.} & & \textbf{Bezeichnung}  & \textbf{Werte}                               & \textbf{Verantw.}\\ \hline
+           &   & \textbf{Gerät}                &                                          &\\ \hline
+    \rowno & F & Gerätemasse maximal L x B x H & 50 cm x 50 cm x 100 cm                   & M \\  \hline
+    \rowno & M & Gewicht                       & max. 6 kg ohne Stromversorgung, ohne CPU & E / M\\ \hline
+    \rowno & W & Gewicht                       & max. 2 kg ohne Stromversorgung, ohne CPU & E / M\\ \hline
+    \rowno & F & Startbefehl                   & drahtlos                                 & E / I\\ \hline
+    \rowno & W & Startbefehl                   & drahtlos via Smartphone                  & E / I\\ \hline
+    \rowno & F & Stoppbefehl                   & Akustisch oder optisch                   & E / I\\ \hline
+    \rowno & W & Stoppbefehl                   & Akustisch und optisch                    & E / I\\ \hline
+    \rowno & F & Autonomität	               & autonomer Ablauf                         & E / I\\ \hline
+    \rowno & W & Autonomität                   & autonome Energieversorgung               & E / I\\ \hline
+    \rowno & M & Lautstärke				       & max. 100 dB                              & E / I / M\\ \hline
+    \rowno & M & Lautstärke				       & max. 60 dB                               & E / I / M\\ \hline
+    \rowno & M & Treffgenauigkeit              & innerhalb 20 cm x 20 cm                  & E / I / M\\ \hline
+    \rowno & W & Treffgenauigkeit              & innerhalb 10 cm x 10 cm                  & E / I / M\\ \hline
+           &   &                               &                                          & \\ \hline
+           &   & \textbf{Randbedingungen}      &                                          & \\ \hline
+           &   & \textbf{Kosten}               &                                          & \\ \hline
+    \rowno & F & Finanzieller Aufwand          & max. 600 CHF                             & \\ \hline
+           &   &                               &                                          & \\ \hline
+           &   & \textbf{Tennisball}           &                                          & \\ \hline
+    \rowno & F & Gewicht                       & 56 g - 59 g                              & Dozenten\\ \hline
+    \rowno & F & Durchmesser                   & min. 6.3 cm , max. 7.3 cm                & Dozenten\\ \hline
+    \rowno & F & Ballzustand                   & neu / kaum gebraucht                     & Dozenten\\ \hline
+           &   &                               &                                          & \\ \hline
+           &   & \textbf{Spielfeld}            &                                          & \\ \hline
+    \rowno & F & Startfeld mindestens          & 60 cm x 150 cm                           & Dozenten\\ \hline
+    \rowno & F & Wurfdistanz                   & min. 75 cm ,max. 250 cm                  & Dozenten\\ \hline
+    \rowno & F & Max. Höhe Bogenwurf           & 180 cm                                   & Dozenten\\ \hline
+    \rowno & F & Wandhöhe                      & 100 cm                                   & Dozenten\\ \hline
+    \rowno & F & Korbhöhe                      & 40 cm                                    & Dozenten\\ \hline
+    \rowno & F & Korbdurchmesser               & min. 30 cm                               & Dozenten\\ \hline
+    \rowno & F & Kontrast Korb zu Wand         & Spanplatte zu schwarzem Korb             & Dozenten\\ \hline
+    \rowno & F & Korbstabilität                & mit Sand gefüllt                         & Dozenten\\ \hline
+           &   &                               &                                          & \\ \hline
+           &   & \textbf{Zeitverhältnisse}     &                                          & \\ \hline
+    \rowno & F & Vorbereitungszeit             & max. 5 min                               & E / I / M \\ \hline
+    \rowno & F & Ablaufzeit                    & max. 5 min                               & E / I / M \\ \hline
+    \rowno & W & Ablaufzeit                    & < 45 sec                                 & E / I / M \\ \hline
+           &   &                               &                                          & \\ \hline
+           &   & \textbf{Umgebungsbedingungen} &                                          & \\ \hline
+    \rowno & F & Umgebungstemperatur           & 10 °C bis 45 °C                          & Dozenten \\ \hline
+    \rowno & M & Windgeschwindigkeit           & < 1 km/h                                 & Dozenten\\ \hline
+    \rowno & F & Lichtbedingung                & Abschirmung Infrarotstrahlung            & Dozenten\\ \hline
+    \rowno & F & Lichtbedingung                & Gleichmässige Beleuchtung                & Dozenten\\ \hline
+    \end{longtable}    
     \textbf{Legende:}\\
     F: Festanforderung\\
     M: Mindestanforderung\\
     W: Wunschziel\\
-    \vspace*{14cm}\\
+    \vspace*{13.3cm}\\
     \begin{tabular}{|p{2.1cm}|p{6.4cm}|p{1cm}|p{1.5cm}|}\hline
     Erstellt durch & Dozent akzeptiert & Version & \# Seiten\\ \hline 
-    Team 32        &                   &         & \\
+    Team 32        &                   &  1.0    & \thepage\\
                    &                   &         & \\
                    &                   &         & \\ \hline
     \end{tabular}
