--- a/Dokumentation/Testat_1/Anforderungsliste/Sourcen/header.tex
+++ b/Dokumentation/Testat_1/Anforderungsliste/Sourcen/header.tex
@@ -192,6 +192,24 @@
 \newcommand{\footnoterecall}[1]{%
   \hyperref[#1]{\footnotemark[\value{#1}]}
 } 
+\makeatletter
+\providecommand{\rowno}[1][__empty__]
+{%
+  \ifthenelse{\isundefined{\c@rowno}}
+  {%
+    \newcounter{rowno}
+  }
+  {}%
+  	\ifthenelse{\equal{#1}{__empty__}}
+ 	 {%
+       \stepcounter{rowno}%
+     }
+     {%
+ 	   \setcounter{rowno}{#1}%
+     }%
+  \therowno%
+}
+\makeatother
 %
 %\makeglossaries
 %\include{wa/wa_glossar}
