--- a/Dokumentation/Das_Team/Sourcen/Deckblatt.tex
+++ b/Dokumentation/Das_Team/Sourcen/Deckblatt.tex
@@ -10,13 +10,13 @@
         Güdel Manuel\\
         Pascal Roth\\
         \vspace*{1.2cm}
-        {\Huge Meilenstein 1}\\
+        {\Huge Das Team 32}\\
         \vspace*{1cm}
 %        \begin{figure*}[h!]
 %            \centering
 %            \includegraphics[width=0.7\textwidth]{Sourcen/Bilder/WuerfelTitel}
 %        \end{figure*}
-        \vspace*{2cm}
+        \vspace*{10cm}
         {\normalsize Hochschule Luzern - Technik \& Architektur}\\
         {\normalsize PREN 1}\\
         \vspace*{0.6cm}
