--- a/Dokumentation/Das_Team/Sourcen/Titelblatt.tex
+++ b/Dokumentation/Das_Team/Sourcen/Titelblatt.tex
@@ -10,14 +10,14 @@
         yves.studer@stud.hslu.ch   & thomas.wiss@stud.hslu.ch \\
                                    & \\
         Livio Kunz                 & Niklaus Manser \\
-        Hubelmatt 7                 & Brunnmattstrasse 11\\
-        6206 Neuenkirch         & 6010 Kriens \\
+        Hubelmatt 7                & Brunnmattstrasse 11\\
+        6206 Neuenkirch            & 6010 Kriens \\
         +41 79 811 53 03           & +41 77 405 58 56 \\
         livio.kunz@stud.hslu.ch    & niklaus.manser@stud.hslu.ch \\
                                    & \\
         Matteo Trachsel			   & Manuel Güdel \\
-        Hofstrasse 4               & Riedtalstrasse 4\\
-        6004 Luzern                & 4800 Zofingen\\
+        Ogimatte 7                 & Riedtalstrasse 4\\
+        3713 Reichenbach           & 4800 Zofingen\\
         +41 79 511 57 88           & +41 79 774 41 40 \\
         matteo.trachsel@stud.hslu.ch & manuel.guedel@stud.hslu.ch \\
         						   & \\
@@ -29,12 +29,12 @@
     \end{tabular}
     \vspace*{1.7cm}
     \newline
-    {\Huge Meilenstein 1 Dokumentation}\\
+    {\Huge Das Team 32}\\
     \vspace*{1.2cm}\\
     {\normalsize Dozent: Markus Thalmann}\\
     \vspace*{0.2cm}\\
     {\normalsize Hochschule Luzern - Technik \& Architektur}\\
-    {\normalsize Interdisziplinäre Projekarbeit 2014}\\
+    {\normalsize Interdisziplinäre Projektarbeit 2014}\\
     \vspace*{2.3cm}
     \newline
     {\normalsize Horw, Hochschule Luzern - T\&A, \today}\\
