--- a/Dokumentation/Common/Deckblatt.tex
+++ b/Dokumentation/Common/Deckblatt.tex
@@ -10,7 +10,7 @@
         Güdel Manuel\\
         Pascal Roth\\
         \vspace*{1.2cm}
-        {\Huge Das Team 32}\\
+        {\Huge \myTitel}\\
         \vspace*{1cm}
 %        \begin{figure*}[h!]
 %            \centering
