--- a/Dokumentation/Team.tex
+++ b/Dokumentation/Team.tex
@@ -18,4 +18,5 @@
     \input{DasTeam/Personalblatt}
     \input{DasTeam/Teamcharta}
     \input{DasTeam/Organisation}
+    \input{DasTeam/Zielsetzung}
 \end{document}
