--- a/Dokumentation/DasTeam/Personalblatt.tex
+++ b/Dokumentation/DasTeam/Personalblatt.tex
@@ -39,12 +39,12 @@
                                                 & &  \\
                                                 & &  \\
     Matteo Trachsel                             & &  \multirow{8}{4cm}{\includegraphics[width=0.2\textwidth]{DasTeam/Bilder/MatteoTrachsel.jpg}} \\
-    Hofstrasse 4                                & &  \\
-    6004 Luzern                                 & &  \\
+    Ogimatte 7                                  & &  \\
+    3713 Reichenbach                            & &  \\
     +41 79 511 57 88                            & &  \\
     matteo.trachsel@stud.hslu.ch                & &  \\
     Matura                                      & &  \\
-    Studiengang: Informatik, Vollzeit           & &  \\
+    Studiengang: Maschinenbau, Vollzeit         & &  \\
 \end{tabular}
     
 \begin{tabular}{lp{3.3cm}l}
