--- a/Dokumentation/Common/Deckblatt.tex
+++ b/Dokumentation/Common/Deckblatt.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
     \begin{center}     
-        \parindent0pt{\Huge PREN 1}\\
+        \parindent0pt{\Huge PREN 1, TEAM 32}\\
         \vspace*{1.2cm}
         Yves Studer\\
         Thomas Wiss\\
