--- a/Dokumentation/Common/Titelblatt.tex
+++ b/Dokumentation/Common/Titelblatt.tex
@@ -1,5 +1,5 @@
 \begin{titlepage}
-    \parindent0pt {\Huge PREN 1}\\
+    \parindent0pt {\Huge PREN 1, TEAM 32}\\
     \vspace*{0.7cm}
     \newline
     \begin{tabular}{ p{6cm} p{5cm}}
