Erster draft der Morphologie erstellt

--- a/Dokumentation/Common/header.tex
+++ b/Dokumentation/Common/header.tex
@@ -52,6 +52,14 @@
 
 \usepackage{spreadtab} %benötigt um in Tabellen zu rechnen
 \usepackage{numprint}
+
+%Package damit eine Seite quer genommen werden kann
+\usepackage{lscape}
+
+%Damit man eine Zelle farbig markiert werden
+\usepackage{colortbl}
+
+
 %
 % Rechnen in Tabellen. Zeichen für den Dezimalpunkt
 %
