--- a/Dokumentation/Recherche.tex
+++ b/Dokumentation/Recherche.tex
@@ -17,7 +17,8 @@
     \input{Recherche/Tabelle}
     \input{Recherche/Drehmechanismus} 
     \input{Recherche/Fahrantrieb}    
-    \input{Recherche/Flugobjekte}    
+    \input{Recherche/Flugobjekte}   
+    \input{Recherche/Object-Tracking}     
     %
     % Start mit der eigentlichen Arbeit
     %    
