--- a/Dokumentation/Recherche/Tabelle.tex
+++ b/Dokumentation/Recherche/Tabelle.tex
@@ -1,5 +1,6 @@
 \begin{landscape}
 	\section{Recherche-Tabelle}	
-		\includegraphics[page=1,scale=0.755,clip,trim=6mm 22mm 11mm 18mm]{Recherche/Extern/Produktrecherche.pdf}
-		\includegraphics[page=2,scale=0.755,clip,trim=6mm 22mm 11mm 18mm]{Recherche/Extern/Produktrecherche.pdf}
+		\includegraphics[page=1,scale=0.81,clip,trim=6mm 34mm 35mm 18mm]{Recherche/Extern/Produktrecherche.pdf}
+		\newpage
+		\includegraphics[page=2,scale=0.81,clip,trim=6mm 34mm 35mm 18mm]{Recherche/Extern/Produktrecherche.pdf}
 \end{landscape} 
