--- a/Dokumentation/Recherche.tex
+++ b/Dokumentation/Recherche.tex
@@ -18,7 +18,8 @@
     \input{Recherche/Drehmechanismus} 
     \input{Recherche/Fahrantrieb}    
     \input{Recherche/Flugobjekte}   
-    \input{Recherche/Object-Tracking}     
+    \input{Recherche/Object-Tracking} 
+    \input{Recherche/Versorgung}      
     %
     % Start mit der eigentlichen Arbeit
     %    
