--- a/Dokumentation/Recherche/Flugobjekte.tex
+++ b/Dokumentation/Recherche/Flugobjekte.tex
@@ -1,36 +1,17 @@
 \subsection{Flugobjekte}
-Als Flugobjekte wurden drei verschiedene Möglichkeiten ins Auge gefasst. Dazu zählt ein Quadcopter, eine Zeppelin und eine Rakete. Die Hauptschwierigkeit besteht bei der Steuerung der Objekte in der Flugphase. Eine weitere Teilschwierigkeit ist, eine berechenbare Flugbahn zu erreichen. 
+Als Flugobjekte wurden drei verschiedene Möglichkeiten ins Auge gefasst. Dazu zählt ein Quadcopter, eine Zeppelin und eine Rakete. Die Hauptschwierigkeit besteht bei der Steuerung der Objekte während der Flugphase. Eine weitere Teilschwierigkeit ist, eine berechenbare Flugbahn zu erreichen. 
 
 \subsubsection{Quadrocopter}
-\textbf{Vorteile}\\
-Ein Quadrocopter kann als fertiger Baukasten gekaut und zusammengebaut werden. Die Flugsteuerung erfolgt über eine fertige Software.\\
-\\
-\textbf{Nachteile}\\
-Die Steuerung des Quadrocopter ist sehr schwierig. Die Orientierung im Raum ist mit einer einfachen Software nicht möglich. Um eine bestimmte Flugbahn einzuhalten, brauchte man diverse Kameras, welche im Raum verteilt sind. Der ganze Quadrocopter und die Steuerung sind sehr kostenintensiv.\\
-\\
-\textbf{Umsetzbarkeit}\\
-Eine Möglichkeit, für eine effiziente Umsetzung eines Quadrocopters in das Konzept ist fast 
-Unmöglich. Die Kosten werden bei weitem überschritten. Die genaue Steuerung im Raum ist extrem schwierig. 
+Ein Quadcopter kann nach einer schon vorhandenen Bauanleitung zusammengebaut werden. Die Flugsteuerung erfolgt über diverse Beschleunigungssensoren, wodurch die Flugbahn sehr stabil gehalten werden kann. Die Traglast eines Quadcopters kann, mit den Eingebauten Motor angepasst werden. Somit ist es kein Problem auch schwerere Gegenstände zu transportieren.\\
+Die Steuerung des Quadcopter ist sehr schwierig. Die Orientierung im Raum ist mit einer einfachen Software nicht möglich. Um eine bestimmte Flugbahn einzuhalten, benötigt man diverse Kameras, welche den Flugraum überwachen. Um eine genaue Fluggbahn zu erreichen, braucht es eine aufwendige Softwarelösung. Der Quadcopter und die Steuerung sind sehr kostenintensiv.\\
+Eine Möglichkeit, für eine effiziente Umsetzung eines Quadcopters für den Transport der Bälle ist fast Unmöglich. Die Kosten werden bei weitem überschritten. Die genaue Steuerung im Raum ist extrem schwierig und kann ohne Vorkenntnisse fast nicht realisiert werden. 
+
 
 \subsubsection{Zeppelin}
-\textbf{Vorteile}\\
-Der Zeppelin kann als fertiger Baukasten gekauft werden. Die Modelle können der jeweiligen Hebelast angepasst werden. \\
-\\
-\textbf{Nachteile}\\
-Der Auftriebskörper für eine kleine Masse zu heben, ist sehr gross. Die Steuerung des ganzen Zeppelins verläuft sehr träge.\\
-\\
-\textbf{Umsetzbarkeit}\\
-Aus Platzgründen, welcher der Auftriebkörper benötigt, ist der Zeppelin sehr schwierig zu realisieren. \\
-\\
+Der Bau eines Zeppelins ist sehr simple und kann mit wenig Mittel realisiert werden. Der Auftriebskörper kann der jeweiligen Last angepasst werden. Der Vortrieb funktioniert mit einem Einfachen Propellerantrieb. \\
+Der Auftriebskörper für eine kleine Masse zu heben, ist sehr gross. Die Steuerung des ganzen Zeppelins verläuft sehr träge und langsam. Der Zeppelin ist sehr Anfällig gegen Windströmungen. \\
+Aus Platzgründen, welcher der Auftriebskörper benötigt, ist der Zeppelin sehr schwierig zu realisieren. 
+
 \subsubsection{Rakete}
-\textbf{Vorteile}\\
-Sehr schneller Vortrieb des Wurfskörpers.\\
-\\
-\textbf{Nachteile}\\
-Die Wurfbahn einer Rakete auf kleine Distanz ist fast unmöglich. \\
-\\
-\textbf{Umsetzbarkeit}\\
-Die Umsetzung eines Raketenantriebes ist unmöglich.\\
-\\
-\\
-Als erstes wurden diverse ins Auge gefasst, wie die Bälle durch die Luft befördert werden können. Dazu gibt es schon diverse fertige Lösungen, welche mit einigen Änderungen übernommen werden können. Die Webseite für den Bau eines Quadrocopters ist sehr ausführlich und genau beschrieben. Die Umsetzung ist jedoch mit viel Aufwand verbunden. Eine Alternative zum Quadrocopter bietet ein Zeppelin. Auch hier konnte im Internet bereits eine ausführliche Anleitung gefunden werden.
+Die Rakete ist die schnellste Möglichkeit, ein Objekt zu beschleunigen. Der Antriebskörper kann unterschiedlichen Traglasten angepasst werden.\\
+Die Wurfbahn einer Rakete ist auf kleine Distanz fast unmöglich zu berechnen. Eine Rakete eignet sich nur um längerer Distanzen zurückzulegen. Die Umsetzung eines Raketenantriebes ist unmöglich. 
