--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -1,28 +1,16 @@
 \subsection{Object-Tracking – Objekt Verfolgung}
-\subsubsection{Google Obj-Tracking}
-Es wird mithilfe einer Android Smartphone, dessen Kamera und einem Adruino Uno Controller ein Objekt verfolgt. Dazu läuft auf dem Android Smartphone eine App die mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Es ist eine Anleitung und Source Code vorhanden.
-
-\subsubsection{OpenCV}
-OpenCV ist eine OpenSource Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Es wird beschrieben wie mithilfe von OpenCV und einer Android Kamera ein Objekt erkannt werden kann. Vorhanden sind Code Beispiele und Tutorials.
-
-\subsubsection{Center an Object}
-Code Beispiele wie man ein Objekt einmitten kann mithilfe von OpenCV. Code Beispiele sind in C++ und Python gegeben.
-
-\subsubsection{Android Obj-Tracking}
-Ein Tutorial für Object Tracking mit BoofCV. BoofCV ist eine Open-Source Bibliothek für Java. Hat Code Beispiele und Erklärungen wie man ein Objekt verfolgen kann.
+\subsubsection{Google Obj-Tracking with OpenCV}
+Es wird mithilfe einer Android Smartphone, dessen Kamera und einem Adruino Uno Controller ein Objekt verfolgt. Dazu läuft auf dem Android Smartphone eine App die mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Es ist eine Anleitung und Source Code vorhanden. Als Framework wird OpenCV verwendet. OpenSource ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
 
 \subsubsection{Accord.Net}
-Accord.Net ist eine OpenSource Bibliothek für das .Net Framework. Es werden Code Beispiele angeboten und Tutorials
-	
-\subsubsection{Ultrasonic}
-Beschreibt wie die Erkennung von Objekten mithilfe von Ultraschallsensoren.
+Accord.Net ist eine OpenSource Bibliothek für das .Net Framework. Es werden Code Beispiele und Tutorials angeboten. Gut Dokumentiert.
+
+\subsubsection{Ultrasonic / Ultraschall }
+Beschreibt wie die Erkennung von Objekten mithilfe von Ultraschallsensoren. Ultraschallsensoren können sehr günstig sein allerdings ist die Genauigkeit je nach anwendungsfall nicht sehr gross. Die Temperatur beeinflusst die Genauigkeit massgeblich. 
 
 \subsubsection{Infrarot}
-Infrarot Sensoren geben einen Infrarot Lichtstrahl ab, ein Sensor erkennt dann die Rückstrahlung womit sich Objekte erkennen lassen. 
+Infrarot Sensoren geben einen Infrarot Lichtstrahl ab, ein Sensor erkennt dann die Rückstrahlung womit sich Objekte erkennen lassen. Die Distanz beträgt je nach Sensor zwischen 1 – 150 cm. Infrarot kann durch äussere Einflüsse, Lichtquellen, an Genauigkeit einbüsst.
 
 \subsubsection{Laser-Scanning}
-Mithilfe eines Lasers können 3-D Modelle einer Umgebung erstellt werden indem viele Messungen durchgeführt werden und dann die einzelnen Punkte zu einem Gebilde zusammengesetzt werden.
-
-\subsubsection{Laser-Range-Finder}
-Laser Range Finder (LRF) können sehr gut dazu eingesetzt werden Distanzen zu bestimmen. Es werden die verschiedenen 
+Die Reichweite eines Lasers beträgt je nach Art bis zu mehreren hundert Metern. Die Genauigkeit liegt je nach Auswertungshardware im Milimeterbereich. Die Kosten für Laser Systeme sind sehr hoch, wie auch das Gewicht.
 
