Diverse Ergänzungen gemacht

--- a/Dokumentation/Recherche.tex
+++ b/Dokumentation/Recherche.tex
@@ -15,10 +15,12 @@
     \newpage 
     
     \input{Recherche/Tabelle}
-    \input{Recherche/Drehmechanismus} 
-    \input{Recherche/Fahrantrieb}    
-    \input{Recherche/Flugobjekte}   
-    \input{Recherche/Object-Tracking} 
+    \input{Recherche/Kommunikation} 
+    \input{Recherche/Object-Tracking}  
+    \input{Recherche/Flugobjekte} 
+    \input{Recherche/Fahrantrieb}   
+    \input{Recherche/Drehmechanismus}
+    \input{Recherche/Wurfmechanismen}
     \input{Recherche/Versorgung}      
     %
     % Start mit der eigentlichen Arbeit
