--- a/Dokumentation/Recherche/Fahrantrieb.tex
+++ b/Dokumentation/Recherche/Fahrantrieb.tex
@@ -1,2 +1,12 @@
-\subsection{Fahrantrieb}
-Bei der Recherche des Fahrantriebs wurde hauptsächlich darauf geachtet, dass ein guter Stand des Produkts gewährleistet ist. Zum einen bietet sich hier der Raupenantrieb an. Diese Technologie hat eine grosse Kontaktfläche mit dem Boden und ist sehr manövrierfähig. Das Laufwerk kann je nach Grösse und Anforderungen spezifisch ausgelegt werden. Weiter gibt es einen Schraubenantrieb. Hier sind an der Unterseite des Produkts zwei gegenläufige Schrauben angebracht. Durch Bodenkontakt auf der gesamten Länge ist gute Stabilität gewährleistet.  Ausserdem kann sich das Produkt, als Eigenheit des Schraubenantriebes, vom Punkt aus gleichermassen vor und zurück, wie auch seitwärts bewegen. Als Nachteil ist hier die schlechte Traktion auf festem Untergrund. Das Luftkissenfahrzeug schwebt dank eines Überdruckes unter dem Fahrzeug wenige Zentimeter über dem Boden. Gelenkt wird mittels eines Propellers auf dem Fahrzeug, dessen Luftstrom gelenkt wird. Zuletzt ein konventioneller Antrieb via Reifen. Hier gibt es unzählige Ausführungsmöglichkeiten von Antrieb und Lenkung. 
+\section{Fahrantrieb}
+Je nach gewähltem Konzept muss sich der Ballwerfer vor und zurück wie auch seitwärts bewegen können. Dies wird mittels eines Fahrantriebs realisiert. Zum einen ist der Fahrantrieb für den Vortrieb verantwortlich, zum anderen muss er auch ein sicherer Stand des Ballwerfers gewährleisten. Dies ist wichtig um die Genauigkeit des Wurfes nicht zu beeinträchtigen. Weitere Anforderungen die erfüllt werden müssen, sind die Genauigkeit und das Handling. Der Ballwerfer muss leicht und schnell rangierbar sein und sich möglichst genau auf den Korb ausrichten können. 
+
+\subsection{Raupenantrieb}
+Ein Raupenantrieb vereint viele Vorteile auf sich. Er bietet die im Vergleich grösste Auflagefläche auf der Unterlage. Dies ist gleichbedeutend mit der besten Standfestigkeit. Das Laufwerk kann gefedert oder ungefedert ausgeführt sein. Bei der ungefederten Variante kann ein Wurf nahezu ohne Vibrationen ausgeführt werden, da keine Federnden Elemente vorhanden sind. Ein weiterer Vorteil ist die hervorragende Rangierbarkeit. Werden die beiden Raupenketten gegenläufig angetrieben, kann sich der Ballwerfer an Ort drehen. Nachteilig sind die vielen Komponenten die für den Antrieb nötig sind. Das Laufwerk besteht aus Antriebsrad und je nach Länge aus mehreren Laufrädern. Diese alle müssen gelagert und geführt werden. 
+ 
+\subsection{Luftkissenfahrzeug (Hovercraft)}
+Beim Luftkissenfahrteig wird unter dem Rumpf ein Überdruck erzeugt. Auf diesem Luftkissen kann das Fahrzeug vorangleiten. Der Rumpf ist mit einer abriebfesten Kunststoffgewebeschürze versehen, welche das Luftvolumen möglichst unter dem Fahrzeug hält. Der Vortrieb und die Lenkung wird mittels eines Propellers auf dem Fahrzeug dessen Luftstrom gelenkt wird, realisiert. Ist der Auftriebsmotor ausgeschaltet, liegt das ganze Fahrzeug auf dem Boden auf, was eine sehr gute Standfestigkeit für den Wurf gibt. Durch die Gewebeschürzen welche zu diesem Zeitpunkt nach wie vor unter dem Fahrzeug befindet, ist kein komplett waagrechter Stand gewährleistet. Auch sind sehr viele Komponenten verbaut, was sich negativ auf das Gewicht auswirkt.
+
+\subsection{Pneufahrzeug}
+Der Ballwerfer steht auf drei oder mehr Rädern. Um einen sicheren Stand zu gewährleisten sollten mindestens zwei Achsen an je zwei Räder verbaut werden. Die Räder können je nach Anforderungen verschieden ausgeführt sein. Luftbefüllt, mit Schlauch, Tubeless oder auch als Vollmaterial. Der Vorteil von Vollmaterialräder ist der gute Stand, das heisst es gibt keine Federwirkung durch den Rückstoss des Wurfes. Der Antrieb kann in eine Achse integriert werden und bedarf keiner grösseren Anpassungen. Ein Nachteil ist die Lenkung. Es muss eine Lenkung an mindestens einer Achse realisiert werden. Diese kann je nach Anforderung und Platzverhältnisse relativ komplex ausfallen.
+ 
