--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -1,4 +1,6 @@
 \section{Object-Tracking – Objekt Verfolgung}
+Es wurden die verschiedenen Möglichkeiten angeschaut wie ein Objekt erkannt werden kann. Die Möglichkeiten sind mit den gestellten Anforderungen und auf ihre Realisierbarkeit verglichen worden. Genauigkeit und Geschwindigkeit spielen eine gewichtige Rolle wie auch der benötigte Aufwand und Kosten für die Umsetzung.
+
 \subsection{Google Obj-Tracking with OpenCV}
 Es wird mithilfe einer Android Smartphone, dessen Kamera und einem Adruino Uno Controller ein Objekt verfolgt. Dazu läuft auf dem Android Smartphone eine App die mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Es ist eine Anleitung und Source Code vorhanden. Als Framework wird OpenCV verwendet. OpenSource ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
 
