Produktrecherche gegengelesen und korrigiert

--- a/Dokumentation/Recherche/Flugobjekte.tex
+++ b/Dokumentation/Recherche/Flugobjekte.tex
@@ -1,17 +1,15 @@
-\section{Flugobjekte}
-Als Flugobjekte wurden drei verschiedene Möglichkeiten ins Auge gefasst. Dazu zählt ein Quadcopter, eine Zeppelin und eine Rakete. Die Hauptschwierigkeit besteht bei der Steuerung der Objekte während der Flugphase. Eine weitere Teilschwierigkeit ist, eine berechenbare Flugbahn zu erreichen. 
+﻿\section{Flugobjekte}
+Durch die gestellten Anforderungen bietet es sich auch an, die Problemstellung mit einem Flugobjekt zu lösen. Auch hier gibt es diverse Möglichkeiten. Dazu zählt ein Quadcopter, eine Zeppelin und eine Rakete. Die Hauptschwierigkeit besteht bei der Steuerung der Objekte während der Flugphase. Eine weitere Teilschwierigkeit ist, eine berechenbare Flugbahn zu erreichen. 
 
 \subsection{Quadrocopter}
-Ein Quadcopter kann nach einer schon vorhandenen Bauanleitung zusammengebaut werden. Die Flugsteuerung erfolgt über diverse Beschleunigungssensoren, wodurch die Flugbahn sehr stabil gehalten werden kann. Die Traglast eines Quadcopters kann, mit den Eingebauten Motor angepasst werden. Somit ist es kein Problem auch schwerere Gegenstände zu transportieren.\\
-Die Steuerung des Quadcopter ist sehr schwierig. Die Orientierung im Raum ist mit einer einfachen Software nicht möglich. Um eine bestimmte Flugbahn einzuhalten, benötigt man diverse Kameras, welche den Flugraum überwachen. Um eine genaue Fluggbahn zu erreichen, braucht es eine aufwendige Softwarelösung. Der Quadcopter und die Steuerung sind sehr kostenintensiv.\\
-Eine Möglichkeit, für eine effiziente Umsetzung eines Quadcopters für den Transport der Bälle ist fast Unmöglich. Die Kosten werden bei weitem überschritten. Die genaue Steuerung im Raum ist extrem schwierig und kann ohne Vorkenntnisse fast nicht realisiert werden. 
-
+Ein Quadcopter kann nach einer schon vorhandenen Bauanleitung zusammengebaut werden. Die Flugsteuerung erfolgt über mehrere Beschleunigungssensoren, wodurch die Flugbahn sehr stabil gehalten werden kann. Die Traglast eines Quadcopters kann durch Verwendunge eines stärkeren Motors erhöht werden, wodurch es kein Problem ist, auch schwerere Gegenstände zu transportieren.\\
+Die Steuerung des Quadcopter ist schwierig. Die Orientierung im Raum ist mit einer einfachen Software nicht möglich. Um eine bestimmte Flugbahn einzuhalten, benötigt man diverse Kameras, welche den Flugraum überwachen. Um eine genaue Fluggbahn zu erreichen, braucht es eine aufwendige Softwarelösung. Der Quadcopter und die Steuerung sind sehr kostenintensiv.
 
 \subsection{Zeppelin}
-Der Bau eines Zeppelins ist sehr simple und kann mit wenig Mittel realisiert werden. Der Auftriebskörper kann der jeweiligen Last angepasst werden. Der Vortrieb funktioniert mit einem Einfachen Propellerantrieb. \\
-Der Auftriebskörper für eine kleine Masse zu heben, ist sehr gross. Die Steuerung des ganzen Zeppelins verläuft sehr träge und langsam. Der Zeppelin ist sehr Anfällig gegen Windströmungen. \\
-Aus Platzgründen, welcher der Auftriebskörper benötigt, ist der Zeppelin sehr schwierig zu realisieren. 
+Der Bau eines Zeppelins kann mit wenig Mittel realisiert werden. Der Auftriebskörper kann der jeweiligen Last angepasst werden. Der Vortrieb funktioniert mit einem Einfachen Propellerantrieb. \\
+Nur schon wenig Traglast in die Luft zu befördern bedarf eines grossen Auftriebskörpers. Die Steuerung des ganzen Zeppelins verläuft eher träge und hinzu kommt, dass durch Luftströmungen die Flugbahn leicht gestört werden kann. \\
+Die Konstruktion eines Zeppelins wird somit den Anforderungen nicht ganz gerecht.
 
 \subsection{Rakete}
 Die Rakete ist die schnellste Möglichkeit, ein Objekt zu beschleunigen. Der Antriebskörper kann unterschiedlichen Traglasten angepasst werden.\\
-Die Wurfbahn einer Rakete ist auf kleine Distanz fast unmöglich zu berechnen. Eine Rakete eignet sich nur um längerer Distanzen zurückzulegen. Die Umsetzung eines Raketenantriebes ist unmöglich. 
+Die Wurfbahn einer Rakete ist auf kleine Distanz fast unmöglich zu berechnen. Eine Rakete eignet sich nur um längere Distanzen zurückzulegen. Die Umsetzung einer Lösung durch Raketenantrieb ist nur schwer zu realisieren.
