--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -1,6 +1,6 @@
-\section{Object-Tracking – Objekt Verfolgung}
+﻿\section{Object-Tracking – Objekt Verfolgung}
 \subsection{Google Obj-Tracking with OpenCV}
-Es wird mithilfe einer Android Smartphone, dessen Kamera und einem Adruino Uno Controller ein Objekt verfolgt. Dazu läuft auf dem Android Smartphone eine App die mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Es ist eine Anleitung und Source Code vorhanden. Als Framework wird OpenCV verwendet. OpenSource ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
+Zur Objekterkennung läuft auf dem Android Smartphone eine App, welche mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Es ist eine Anleitung und Source Code vorhanden. Als Framework wird OpenCV verwendet. Google Obj-Tracking ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
 
 \subsection{Accord.Net}
 Accord.Net ist eine OpenSource Bibliothek für das .Net Framework. Es werden Code Beispiele und Tutorials angeboten. Gut Dokumentiert.
@@ -12,5 +12,5 @@ Beschreibt wie die Erkennung von Objekten mithilfe von Ultraschallsensoren. Ultr
 Infrarot Sensoren geben einen Infrarot Lichtstrahl ab, ein Sensor erkennt dann die Rückstrahlung womit sich Objekte erkennen lassen. Die Distanz beträgt je nach Sensor zwischen 1 – 150 cm. Infrarot kann durch äussere Einflüsse, Lichtquellen, an Genauigkeit einbüsst.
 
 \subsection{Laser-Scanning}
-Die Reichweite eines Lasers beträgt je nach Art bis zu mehreren hundert Metern. Die Genauigkeit liegt je nach Auswertungshardware im Milimeterbereich. Die Kosten für Laser Systeme sind sehr hoch, wie auch das Gewicht.
+Die Reichweite eines Lasers beträgt je nach Art bis zu mehreren hundert Metern. Die Genauigkeit liegt je nach Auswertungshardware im Milimeterbereich. Die Kosten für Laser-Systeme sind allerdings sehr hoch, wie auch deren Gewicht.
 
