--- a/Dokumentation/Recherche/Versorgung.tex
+++ b/Dokumentation/Recherche/Versorgung.tex
@@ -1,7 +1,7 @@
-\section{Versorgung}
+﻿\section{Versorgung}
 Eine Möglichkeit um das Produkt mit Energie zu versorgen, ist ein Akkumulator. Es gibt verschiedene Typen: Blei-Akkus, Li-Ionen-Akku, Nickel-Cadmium-Akku (NiCd), Nickel-Metallhydird-Akku (NiMh). Jeder Typ hat verschiedene Vor- und Nachteile, die in der Tabelle \ref{tab:UebersichtVorNachTeil} ersichtlich sind.\\
 \\
-Ein grosser Vorteil besteht darin, dass ein Akkumulator nicht Teil des Produktegewichts ist. Wichtig für die anschliessende Auswahl des Akkumulators sind die Spannung, Strom, Kapazität des Akkumulators. In dieser Technologierecherche beschränkt man sich auf Eckdaten, die die Akkus auszeichnen, wie in der Tabelle \ref{tab:UebersichtAkku} ersichtlich.\\ 
+Gemäss den Anforderungen zählt ein Akkumulator nicht zum bewerteten Gewicht, könnte jedoch eben durch sein Gewicht für zusätzliche Stabilität sorgen, womit er sich als Lösung anbietet. Wichtig für die anschliessende Auswahl eines Akkumulators sind die Spannung, Strom, Kapazität des Akkumulators. An dieser Stelle werden lediglich die Eckdaten ausgewiesen, die die Akkus auszeichnen, wie in der Tabelle \ref{tab:UebersichtAkku} ersichtlich.\\ 
 
 \begin{table}[h!]
 	\begin{tabular}{|p{1.5cm}|p{3.4cm}|p{2.6cm}|p{2.8cm}|} \hline
@@ -30,11 +30,11 @@ Ein grosser Vorteil besteht darin, dass ein Akkumulator nicht Teil des Produkteg
 \end{table}
 
 \subsection{Externe Versorgung}
-In diesem Anschnitt ist die Versorgung mit Energie via Netzteil gemeint. Ein Vorteil eines Netzteils ist die stabile Energie- / Stromversorgung. Da eine Zuführung von einer Steckdose zum Spielfeld gewährleistet sein wird, fällt dies als Nachteil weg. Als Nachteil kann man jedoch auflisten, dass man das Netzteil nicht als Ballast verwenden kann. 
+Externe Versorgung bezeichnet die Speisung des Geräts durch ein Netzteil. Ein Vorteil eines Netzteils ist die stabile Energie- / Stromversorgung. Die Zuführung von einer Steckdose zum Spielfeld wird gewährleistet sein. Als einziger Nachteil gilt somit, dass ein Netzteil nicht als Ballast gewertet wird und somit nachteilig für die Bewertung wäre im Vergleich mit einem Akku beispielsweise.
 
 \subsection{Pneumatik}
-Eine Versorgung mit Druckluft ist aufwendig und muss beim Spielfeld zur Verfügung gestellt werden. Ansonsten müsste man einen Kompressor mit Wartungseinheit organisieren. Zudem sind die Komponenten (Zylinder, Ventile, …) im Neuzustand seht teuer im Einkauf. 
+Eine Versorgung mit Druckluft ist aufwendig und muss beim Spielfeld zur Verfügung gestellt werden. Ansonsten müsste man einen Kompressor mit Wartungseinheit organisieren. Zudem sind die Komponenten (Zylinder, Ventile, etc.) im Neuzustand seht teuer.
 
 \subsection{Hydraulik}
-Die Versorgung mit Hydraulik-öl ist noch aufwendiger als jene mit Druckluft. Es muss ein eigenes System mit Pumpe, Schläuchen, Hydrauliköl und teuren Komponenten erstellt werden. Zudem entsteht bei einem Defekt resp. Unfall mit Hydrauliköl schnell ein grosser Sachschaden und erfordert einen grossen Reinigungsaufwand. 
+Die Versorgung mit Hydraulik-Öl ist noch aufwendiger als jene mit Druckluft. Es muss ein eigenes System mit Pumpe, Schläuchen, Hydrauliköl und teuren Komponenten erstellt werden. Bei einem Defekt, resp. Unfall mit Hydrauliköl entsteht zudem schnell ein grosser Sachschaden und erfordert einen grossen Reinigungsaufwand. 
 
