Weitere Korrekturen (Produktrecherche)

--- a/Dokumentation/Recherche/Wurfmechanismen.tex
+++ b/Dokumentation/Recherche/Wurfmechanismen.tex
@@ -2,11 +2,7 @@
 Falls die Bälle abgeworfen werden müssen, wird eine Wurfweite zwischen einem und zwei Metern benötigt. Diese kann mit folgenden Möglichkeiten erreicht werden:
 
 \subsection{Pneumatikzylinder}
-<<<<<<< HEAD
-Pneumatikzylinder eigenen sich gut für die Anwendung als Stossmechanismus. Sie zeichnen sich durch hohe Geschwindigkeiten (50 bis 1500 $\frac{mm}{s}$) sowie mittlere Kräfte () aus. Die Anschaffungskosten liegen bei ungefähr 60.- CHF, je nach Dimensionierung. Um die Endlagen abzufragen verwendet man Zylinder mit eingebauten Magneten, welche mittels Sensoren abgefragt werden. Die Stossgeschwindigkeitsregelung erfolgt in den meisten Fällen durch eine Abluftdrosselung.
-=======
-Pneumatikzylinder eigenen sich sehr gut für die Anwendung als Stossmechanismus. Sie zeichnen sich durch hohe Geschwindigkeiten (50 bis 1500 $\frac{mm}{s}$) sowie mittlere Kräfte (10 bis 1000 N) aus. Die Anschaffungskosten liegend bei ungefähr 60.- CHF, je nach Dimensionierung. Um die Endlagen abzufragen verwendet man Zylinder mit eingebauten Magneten, welche mittels Sensoren abgefragt werden. Die Stossgeschwindigkeitsregelung erfolgt in den meisten Fällen durch eine Abluftdrosselung.
->>>>>>> origin/master
+Pneumatikzylinder eigenen sich gut für die Anwendung als Stossmechanismus. Sie zeichnen sich durch hohe Geschwindigkeiten (50 bis 1500 $\frac{mm}{s}$) sowie mittlere Kräfte (10 bis 1000 N) aus. Die Anschaffungskosten liegend bei ungefähr 60.- CHF, je nach Dimensionierung. Um die Endlagen abzufragen verwendet man Zylinder mit eingebauten Magneten, welche mittels Sensoren abgefragt werden. Die Stossgeschwindigkeitsregelung erfolgt in den meisten Fällen durch eine Abluftdrosselung.
 
 \subsection{Beschleunigungsräder}
 Die heutigen Tennisballwurfmaschinen sind nach dem Prinzip von zwei Beschleunigungsrädern aufgebaut. Diese drehen gegeneinander mit hoher Drehzahl und beschleunigen den Ball auf seine Abwurfgeschwindigkeit. Durch unterschiedliche Drehzahlen des Oberrades zum Unterrad kann ein Drall in Form von \enquote{Topspin} oder umgekehrt in Form von \enquote{Slice} dem Ball gegeben werden. Dieser stabilisiert die Flugbahn.\\
