--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -1,12 +1,8 @@
-<<<<<<< HEAD
 ﻿\section{Object-Tracking – Objekt Verfolgung}
-=======
-\section{Object-Tracking – Objekt Verfolgung}
-Es wurden die verschiedenen Möglichkeiten angeschaut wie ein Objekt erkannt werden kann. Die Möglichkeiten sind mit den gestellten Anforderungen und auf ihre Realisierbarkeit verglichen worden. Genauigkeit und Geschwindigkeit spielen eine gewichtige Rolle wie auch der benötigte Aufwand und Kosten für die Umsetzung.
+Die Erkennung des Korbs, sowie die Bestimmung der Distanz zum Ziel müssen durch einen geeigneten Mechanismus gelöst werden. Genauigkeit und Geschwindigkeit spielen dabei eine gewichtige Rolle wie auch der benötigte Aufwand und Kosten für die Umsetzung.
 
->>>>>>> origin/master
 \subsection{Google Obj-Tracking with OpenCV}
-Zur Objekterkennung läuft auf dem Android Smartphone eine App, welche mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Es ist eine Anleitung und Source Code vorhanden. Als Framework wird OpenCV verwendet. Google Obj-Tracking ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
+Zur Objekterkennung gibt es die Möglichkeit, wäre eine App für ein Smartphone denkbar, welche mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Anleitungen und Source Code sind vorhanden. Als Framework wird OpenCV verwendet. Google Obj-Tracking ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
 
 \subsection{Accord.Net}
 Accord.Net ist eine OpenSource Bibliothek für das .Net Framework. Es werden Code Beispiele und Tutorials angeboten. Gut Dokumentiert.
