--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -2,13 +2,13 @@
 Die Erkennung des Korbs, sowie die Bestimmung der Distanz zum Ziel müssen durch einen geeigneten Mechanismus gelöst werden. Genauigkeit und Geschwindigkeit spielen dabei eine gewichtige Rolle wie auch der benötigte Aufwand und Kosten für die Umsetzung.
 
 \subsection{Google Obj-Tracking with OpenCV}
-Zur Objekterkennung gibt es die Möglichkeit, wäre eine App für ein Smartphone denkbar, welche mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Anleitungen und Source Code sind vorhanden. Als Framework wird OpenCV verwendet. Google Obj-Tracking ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
+Zur Objekterkennung wäre eine App für ein Smartphone denkbar, welche mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Anleitungen und Source Code sind vorhanden. Als Framework wird OpenCV verwendet. Google Obj-Tracking ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
 
 \subsection{Accord.Net}
 Accord.Net ist eine OpenSource Bibliothek für das .Net Framework. Es werden Code Beispiele und Tutorials angeboten. Gut Dokumentiert.
 
 \subsection{Ultrasonic / Ultraschall }
-Beschreibt wie die Erkennung von Objekten mithilfe von Ultraschallsensoren. Ultraschallsensoren können sehr günstig sein allerdings ist die Genauigkeit je nach anwendungsfall nicht sehr gross. Die Temperatur beeinflusst die Genauigkeit massgeblich. 
+Ultraschallsensoren können sehr günstig sein allerdings ist die Genauigkeit je nach anwendungsfall nicht sehr gross. Die Temperatur beeinflusst die Genauigkeit massgeblich. 
 
 \subsection{Infrarot}
 Infrarot Sensoren geben einen Infrarot Lichtstrahl ab, ein Sensor erkennt dann die Rückstrahlung womit sich Objekte erkennen lassen. Die Distanz beträgt je nach Sensor zwischen 1 – 150 cm. Infrarot kann durch äussere Einflüsse, Lichtquellen, an Genauigkeit einbüsst.
