Kleine Änderungen (Recherche)

--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -11,7 +11,7 @@ Accord.Net ist eine OpenSource Bibliothek für das .Net Framework. Es werden Cod
 Ultraschallsensoren können sehr günstig sein allerdings ist die Genauigkeit je nach anwendungsfall nicht sehr gross. Die Temperatur beeinflusst die Genauigkeit massgeblich. 
 
 \subsection{Infrarot}
-Infrarot Sensoren geben einen Infrarot Lichtstrahl ab, ein Sensor erkennt dann die Rückstrahlung womit sich Objekte erkennen lassen. Die Distanz beträgt je nach Sensor zwischen 1 – 150 cm. Infrarot kann durch äussere Einflüsse, Lichtquellen, an Genauigkeit einbüsst.
+Infrarot Sensoren geben einen Infrarot Lichtstrahl ab, ein Sensor erkennt dann die Rückstrahlung womit sich Objekte erkennen lassen. Die Distanz beträgt je nach Sensor zwischen 1 – 150 cm. Infrarot kann durch äussere Einflüsse wie Lichtquellen an Genauigke.it einbüssen
 
 \subsection{Laser-Scanning}
 Die Reichweite eines Lasers beträgt je nach Art bis zu mehreren hundert Metern. Die Genauigkeit liegt je nach Auswertungshardware im Milimeterbereich. Die Kosten für Laser-Systeme sind allerdings sehr hoch, wie auch deren Gewicht.
